# game-of-life

./: .editorconfig  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
data/: input.txt  output.txt
includes/: generation.h  hello.h
src/: generation.c  hello.c  main.c
